@@ -5,24 +5,28 @@
 # exporting the right interface.
 
 import unittest
+import numpy as np
 
 from bl.core.messages.registry import message_codecs_registry
 from bl.core.messages.MessageStreamHeader import MessageStreamHeader
 from bl.core.messages.Dummy import Dummy
 
+from bl.core.messages.KinshipVectors import KinshipVectors_to_msg
+from bl.core.messages.KinshipVectors import msg_to_KinshipVectors
 
-class test_messages(unittest.TestCase):
 
-  def dummy(self):
+class TestMessages(unittest.TestCase):
+
+  def test_dummy(self):
     msg_name = 'core.messages.Dummy'
     codec_info = message_codecs_registry.lookup(msg_name)
     v = 'fooo', 10, 0.34
-    msg = codec_info.encoder.encode(v)
+    msg = codec_info.encoder.encode(*v)
     self.assertTrue(isinstance(msg, Dummy))
     new_v = codec_info.decoder.decode(msg)
     self.assertEqual(v, new_v)
 
-  def message_stream_header(self):
+  def test_message_stream_header(self):
     msg_name = 'core.messages.MessageStreamHeader'
     codec_info = message_codecs_registry.lookup(msg_name)
     header = {'foo' : 333, 'bar' : [1,2,3], 'fu' : {'a' : 2, 'b' : 3}}
@@ -31,12 +35,21 @@ class test_messages(unittest.TestCase):
     new_header = codec_info.decoder.decode(msg)
     self.assertEqual(header, new_header)
 
-  def runTest(self):
-    self.message_stream_header()
+  def test_kinship_vectors(self):
+    N = 5
+    vectors = [np.random.random(N).astype(np.float32) for _ in xrange(3)]
+    for _ in xrange(2):
+      vectors.append([])
+      for i in xrange(N-1, 0, -1):
+        vectors[-1].append(np.random.random(i).astype(np.float32))
+    msg = KinshipVectors_to_msg(*vectors)
+    unpacked_vectors = msg_to_KinshipVectors(msg)
+    for i in xrange(3):
+      self.assertTrue(np.array_equal(vectors[i], unpacked_vectors[i]))
 
 
 def load_tests(loader, tests, pattern):
-  test_cases = (test_messages,)
+  test_cases = (TestMessages,)
   suite = unittest.TestSuite()
   for tc in test_cases:
     suite.addTests(loader.loadTestsFromTestCase(tc))
